--- a/sections/introduction/important_information.tex
+++ b/sections/introduction/important_information.tex
@@ -4,8 +4,14 @@
 
 \begin{document}
 
-\textbf{license}
-\newline
-\blindtext
+\textit{This is mostly targeted to certain individuals who carelessly read this guide while cramming.}
+
+\enumerate
+
+\item hi
+
+\item world
+
+\endenumerate
 
 \end{document}
