--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
-\documentclass[a4paper, 12pt, oneside]{book} % we are not printing this like a book
-\usepackage[hmargin=2.5cm,vmargin=3cm,bindingoffset=0.5cm]{geometry}
+\documentclass[a4paper, oneside, 12pt]{book} % we are not printing this like a book
+\usepackage[hmargin=2cm,vmargin=2.5cm,bindingoffset=0.5cm]{geometry}
 \usepackage[hidelinks]{hyperref}
 \usepackage{bookmark}
 \usepackage{graphicx}
@@ -13,12 +13,17 @@
 \author{Eason Qin (eason@ezntek.com)}
 \date{February 2025}
 
+% paragraph spacing
+\setlength{\parskip}{1em}
+% no indenting paragraphs (its 2025)
+\setlength{\parindent}{0pt}
+
+% page styling
 \pagestyle{fancy}
 \setlength{\headheight}{15pt}
 \fancyhf{}
 \fancyhead[L]{The IGCSE Computer Science Revision Guide}
 \fancyhead[R]{\nouppercase{\leftmark}}
-
 \fancyfoot[C]{\thepage}
 
 \begin{document}
@@ -26,11 +31,13 @@
 % Title Page
 \maketitle
 % TOC
+\label{table-of-contents}
 \tableofcontents
 
 \chapter*{Introduction}
 \addcontentsline{toc}{chapter}{Introduction}
 \markboth{Introduction}{Introduction} % ew
+\label{introduction}
 \subfile{chapters/introduction}
 
 \end{document}
