--- a/sections/introduction/license.tex
+++ b/sections/introduction/license.tex
@@ -7,12 +7,13 @@
 The whole work, along with all code produced by all contributors and I are licensed
 under the Creative Commons Attribution-ShareAlike-NonCommercial (CC BY-SA-NC) 4.0 International License.
 
-This means that you can do the following:
-\begin{enumerate}
+This means that you may do the following:
+
+\enumerate
 \item You must attribute me, i.e. state that the work was produced by us, the creators if
 you use it as a part of your work or teachings, or expand upon my work.
 
-\item You may use the guide for any purpose, you can use it to teach yourself or teach
+\item You may use the guide for any purpose, you may use it to teach yourself or teach
 others, whatever you like.
 
 \item You may share the guide with anybody else with no restrictions.
@@ -28,6 +29,6 @@ the authors list.
 \item You must not make money off of it. Failure to comply means that I, and all
 other contributors may take any legal action on you if needed.
 
-\end{enumerate}
+\endenumerate
 
 \end{document}
