--- a/sections/introduction/important_information.tex
+++ b/sections/introduction/important_information.tex
@@ -8,9 +8,9 @@
 
 \enumerate
 
-\item hi
+\item The chapter and section markers \textbf{\textit{will not correspond to the textbook directly!}} Some of the content is deemed too trivial to write about; for those sections I urge you to use your textbook.
 
-\item world
+\item 
 
 \endenumerate
 
