--- a/main.tex
+++ b/main.tex
@@ -16,10 +16,14 @@
 \setlength{\spaceskip}{0.55em plus 0.15em minus 0.15em}
 
 % image paths
-\graphicspath{images/}
+\graphicspath{ {./images/} }
 
 % mono
 \newcommand{\mono}{\fontfamily{ccode}\selectfont} 
+%\newcommand{\b}{\textbf}
+\newcommand{\e}{\emph}
+%\newcommand{\i}{\textit}
+%\newcommand{\u}{\underline}
 
 % paragraph spacing
 \setlength{\parskip}{1em}
@@ -43,7 +47,7 @@
 \pagestyle{fancy}
 \setlength{\headheight}{15pt}
 \fancyhf{}
-\fancyhead[L]{The IGCSE Computer Science Revision Guide}
+\fancyhead[L]{\textbf{The IGCSE Computer Science Revision Guide}}
 \fancyhead[R]{\nouppercase{\leftmark}}
 \fancyfoot[C]{\thepage}
 
@@ -68,5 +72,8 @@
 
 \chapter{Data Representation}
 \subfile{chapters/1_data_representation}
+
+\chapter{Data Transmission}
+\subfile{chapters/2_data_transmission}
 
 \end{document}
