--- a/sections/2/packet_switching.tex
+++ b/sections/2/packet_switching.tex
@@ -9,8 +9,6 @@ A packet looks like the following:
 
 \includegraphics[scale=0.5]{packet.png}
 
-\newpage
-
 \paragraph{Components of a packet}
 
 \begin{itemize}
@@ -29,15 +27,12 @@ A packet looks like the following:
                   this is referred to as a \emph{sentinel value}, which just means a value that carries some special meaning. An example is like in the
                   C programming language, to tell the end of a string, a sentinel value of 0 is used to denote the string finished.}. The algorithm can
                   then scan the data until it hit that character to extract the payload.
-            \item An error checking method. CRCs are used to check this (see \hyperref[par:CRCs]{below}).
+            \item An error checking method. CRCs are used to check this.
         \end{itemize}
 \end{itemize}
+ 
+\paragraph{Packet Switching}
 
-\label{par:CRCs} % label used lol
-\paragraph{Cyclic Redundancy Checks}
-
-
-
-
+In order to transfer packets from one place to another
 
 \end{document}
