progress(ch2): finish USB + packet switching

--- a/main.tex
+++ b/main.tex
@@ -12,6 +12,9 @@
 \usepackage{minted}
 \usepackage{cascadia-code}
 
+% nicer footnotes
+\usepackage[splitrule]{footmisc}
+
 % font spacing
 \setlength{\spaceskip}{0.55em plus 0.15em minus 0.15em}
 
