progress(ch2): ip and mac addresses

--- a/main.tex
+++ b/main.tex
@@ -12,6 +12,11 @@
 \usepackage{minted}
 \usepackage{cascadia-code}
 
+% italic captions
+\usepackage[format=plain,
+            labelfont=it,
+            textfont=it]{caption}
+
 % nicer footnotes
 \usepackage[splitrule]{footmisc}
 
@@ -23,10 +28,6 @@
 
 % mono
 \newcommand{\mono}{\fontfamily{ccode}\selectfont} 
-%\newcommand{\b}{\textbf}
-\newcommand{\e}{\emph}
-%\newcommand{\i}{\textit}
-%\newcommand{\u}{\underline}
 
 % paragraph spacing
 \setlength{\parskip}{1em}
