--- a/sections/1/applications_of_hexadecimal.tex
+++ b/sections/1/applications_of_hexadecimal.tex
@@ -21,21 +21,7 @@ There are several applications of the Hexadecimal number system in Computers, wh
 
 \paragraph{Making binary easier to write/represent}
 
-Given long binary sequences, such as 
-
-\begin{minted}{c}
-1011101010111110
-
-#include <stdio.h>
-int main(void) {
-    printf("weewoo\n");
-    return 0;
-}
-
-\end{minted}
-
-Programmers may find it much easier to simply express the given example as {\mono hello world some text here}, which is 4 characters and not 16 when typing/writing.
-Converting between the two formats was covered in \hyperref[sec:1-converting-between-bin-den-and-hexadecimal]{this section}.
+Given long binary sequences, such as {\mono 1011101010111110}Programmers may find it much easier to simply express the given example as {\mono BABE}, which is 4 characters and not 16 when typing/writing. Converting between the two formats was covered in \hyperref[sec:1-converting-between-bin-den-and-hexadecimal]{this section}.
 
 \paragraph{OS error codes}
 stub
