--- a/sections/2/routers_and_network_types.tex
+++ b/sections/2/routers_and_network_types.tex
@@ -5,9 +5,12 @@
 
 \paragraph{Stub}
 
-stub
-
 \label{2:sec:networking_hardware}
 \subsection{Networking Hardware}
+
+\label{2:sec:nats}
+\subsection{NATs (Network Address Translation)}
+
+The reason is that anybody arbitrarily in the world can create a network, and there are simply not enough IPv4 addresses to hold every device possible on every network possible. These local IP addresses are for the networks created by, say, your home router, and 
 
 \end{document}
