--- a/sections/2/ip_and_mac_addresses.tex
+++ b/sections/2/ip_and_mac_addresses.tex
@@ -10,12 +10,12 @@ IP stands for the Internet Protocol, and IP addresses are like street addresses;
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.7\textwidth]{ip_addresses}
-    \caption{Output from the Linux {\mono ip} utility, showing IPv4 and V6 addresses}
+    \caption{Output from the Linux {\ccmono ip} utility, showing IPv4 and V6 addresses}
 \end{figure}
 
 \paragraph{IPv4 Addresses}
 
-Are \textbf{32-bit values} represented as 4 3-digit numbers with dots between them, like {\mono 192.168.0.1} with each value ranging between 0-255. There are 2 tyes of IP addresses, \emph{Public} and \emph{Private} IP addresses.
+Are \textbf{32-bit values} represented as 4 3-digit numbers with dots between them, like {\ccmono 192.168.0.1} with each value ranging between 0-255. There are 2 tyes of IP addresses, \emph{Public} and \emph{Private} IP addresses.
 
 \begin{figure}[h]
     \centering
@@ -47,16 +47,16 @@ In the IPv4 address range, addresses are reserved for private networks to use, a
     \begin{tabular}{ |c|c|c| }
         \hline
         \textbf{Class} & \textbf{IP Range} & \textbf{Most typically seen in} \\ \hline 
-        A & {\mono 10.0.0.0} to {\mono 10.255.255.255}     & Large networks \\ \hline
-        B & {\mono 172.16.0.0} to {\mono 172.31.255.255}   & Medium-sized networks \\ \hline 
-        C & {\mono 192.168.0.0} to {\mono 192.168.255.255} & Small networks \\
+        A & {\ccmono 10.0.0.0} to {\ccmono 10.255.255.255}     & Large networks \\ \hline
+        B & {\ccmono 172.16.0.0} to {\ccmono 172.31.255.255}   & Medium-sized networks \\ \hline 
+        C & {\ccmono 192.168.0.0} to {\ccmono 192.168.255.255} & Small networks \\
         \hline
     \end{tabular}
     \caption{Table of private IP classes}
     \label{tab:private_ip_classes}
 \end{figure}
 
-Note that you do not need to memorize the class letters nor the exact ranges, you just need to identify them, especially the most common one, class C which is between {\mono 192.168.0.0} to {\mono 192.168.255.255}.
+Note that you do not need to memorize the class letters nor the exact ranges, you just need to identify them, especially the most common one, class C which is between {\ccmono 192.168.0.0} to {\ccmono 192.168.255.255}.
 
 These private IPs belong in a local network, where devices in the same approximate geographical location are connected to a router.
 
@@ -101,13 +101,75 @@ This is by far the most common method.
 \begin{itemize}
     \item If you're connected to a video call or voice call through VoIP\footnote{Basically making phone or video calls through a network and not cell towers.}, if your IP address changes, it may disconnect the call\footnote{It is not necessarily true, as your IP is not jumbled at regular intervals.}.
     \item If your device is old and does not support the DHCP protocol, you cannot use it. In short, it may not support all devices.
-    \item Connection time takes longer, you must send a {\mono DHCPLEASE} message to the router for the IP, the router must calculate an IP, and the router must send a {\mono DHCPBACK} with your IP. This typically takes 5 seconds but may take up to 25 seconds.
+    \item Connection time takes longer, you must send a {\ccmono DHCPLEASE} message to the router for the IP, the router must calculate an IP, and the router must send a {\ccmono DHCPBACK} with your IP. This typically takes 5 seconds but may take up to 25 seconds.
 \end{itemize}
 
 \subsection{MAC addresses}
 
+MAC addresses are 48 bit numbers that identify your device uniquely on any given network. They are typically represented as 3 hexadecimal numbers:
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.7\textwidth]{macaddress_breakdown.png}
+    \caption{A breakdown of the portions of a MAC address.}
+    \label{fig:macaddress_breakdown}
+\end{figure}
+
+The first 3 hexadecimal bytes (2 digits) identify the maker of the device\footnote{Technically the NIC or Network Interface Card itself}, like Apple\footnote{Not necessarily, again, it identifies the maker of the NIC.}. The last 3 digits uniquely identifies the device itself.
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.7\textwidth]{macaddress.png}
+    \caption{The MAC address of a computer, running Arch Linux.}
+    \label{fig:macaddress}
+\end{figure}
+
+Figure \ref{fig:macaddress} shows the MAC address of one of my computers. The first 3 components identify the manufacturer, and the last 3 uniquely identifiers my device.\footnote{In this example, I have changed the default MAC address to a randomized one, so the manufacturer may be invalid if you try to look it up.}
+
 \subsubsection{Universally Administered}
 
+These addresses are by far the most common; they are the addresses assigned by manufacturers and universally identify the device. They are used to ensure the unique identification of the device throughout the globe, and avoids conflicts with other MAC addresses.
+
 \subsubsection{Locally Administered}
+
+These are a less commonly talked about form of MAC addresses, these are assigned to the computer by network administrators. These addresses have no guarantee of being completely unique from computer-to-computer, and are used in specific cases where addresses may conflict with each other.
+
+Some organizations, such as mainframe or cluster computers, require MAC addresses to be in a certain format. LAAs allow for the MAC address to be changed, therefore allowing one to change the format. It may also be used to bypass a firewall, as some require the MAC addresses to be in a certain format.
+
+\emph{Extra: LAA addresses also have a property where the 7th bit of the 1st byte of the MAC address is set to 1. UAA addresses have that bit set to 0.}
+
+\subsection{Difference between IP and MAC addresses}
+
+\begin{longtable}{|p{0.4\textwidth}|p{0.4\textwidth}|}
+    \hline 
+    \textbf{MAC addresses} & \textbf{IP addresses}
+    \\ \hline
+    Identifies unique information about a device on a network & Identifies the location of something on a network
+    \\ \hline
+    Unique for the device on the network & Only unique if it is a public IP. Private IPs are only unique to that network, and addresses across many private IPs may be the same, as they are powered by different routers.
+    \\ \hline
+    48 bits & 32 bits for IPv4, or 128 bits for IPv6
+    \\ \hline
+    Can be locally or universally administered & Can be static or dynamic
+    \\ \hline
+    Assigned by the manufacturer and is baked into the NIC & Static IPs are assigned by the connecting device. Dynamic IPs are assigned by the DHCP server, usually built into the router.
+    \\ \hline
+\end{longtable}
+
+\subsection{NATs (Network Address Translation)}
+\label{2:sec:nats}
+
+By now you should be familiar with the concept of private versus public IPs. Private IP addresses only exist on internal private networks, and are separate from all public IPs. How do devices on private IPs then transmit data to websites on public networks?
+
+NATs helps one accomplish this. They allow private IP addresses and public IP addresses to be tempoarily linked together to create a channel whereby data can flow. These are typically in your home router to map devices connected to it to the router's public IP address.
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.7\textwidth]{nat.jpg}
+    \caption{A diagram explaining how network addresses are mapped to public IPs through the NAT.\footnote{Taken from \url{https://en.wikipedia.org/wiki/Network_address_translation#/media/File:Network_Address_Translation_(file2).jpg}}}
+    \label{fig:nat}
+\end{figure}
+
+As seen in figure \ref{fig:nat}, computers on the home network can request for websites (in this case, Yahoo, as the diagram is presumably very old), and the NAT in the router can add your device to a tempoary table that shows where traffic from one private IP should go, and vice versa.\footnote{Do not worry about the port; this allows 65535 channels of data to be open on one IP address, as one single IP is quite limiting.}
 
 \end{document}
