--- a/main.tex
+++ b/main.tex
@@ -10,6 +10,7 @@
 \usepackage{titlesec}
 \usepackage{minted}
 \usepackage{longtable}
+\usepackage{float}
 \setmonofont{Cascadia Code}
 
 \newfontfamily\ccbold{Cascadia Code Bold}
