--- a/sections/2/usb.tex
+++ b/sections/2/usb.tex
@@ -46,7 +46,7 @@ Note that one only needs to know a few advantages and disadvantages; some are qu
     \item The connector itself is more durable due to its thickness
     \item Since the connector only fits in one way, incorrect connections cannot be made
     \item The USB protocol makes use of error correction\footnote{As it should be.}\footnote{If any errors are found, the data is to be re-transmitted.}
-    \item If one needs more ports, they can choose to connect a \emph{USB Hub} which splits one USB port into many, similar to an Ethernet switch (see section \ref{2:sec:networking_hardware})
+    \item If one needs more ports, they can choose to connect a \emph{USB Hub} which splits one USB port into many, similar to an Ethernet switch)
 \end{itemize}
 
 \textbf{Drawbacks include}:
